@startuml
'https://plantuml.com/class-diagram

abstract class MoneyDispenser {
    # MoneyDispenser nextDispenser
    + void setNetDispenser (MoneyDispenser nextDispenser)
    + {abstract} void dispense (int amount)
}
class DenominationDispenser {
    - int denomination
    + DenominationDispenser (int demonination)
    + void dispense (int amount)
}
class Client
class ATM_Machine {
    + MoneyDispenser getDispenserChain (int maxDenomination)

}

Client ..> ATM_Machine : user
ATM_Machine ..> MoneyDispenser : creates getDispenserChain
MoneyDispenser --> MoneyDispenser : nextDispenser
MoneyDispenser <|-- DenominationDispenser

@enduml